Start ediplug-monitor after virtualbox additions are up

--- a/ediplug-monitor.service
+++ b/ediplug-monitor.service
@@ -1,6 +1,7 @@
 [Unit]
 Description=Monitoring service Edimax smart plugs
-After=network.target
+After=network.target vboxadd.service
+Requires=vboxadd.service
 
 [Service]
 Type=simple
